PROD-2474 - Fix document Search results title spacing

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -3463,6 +3463,7 @@ div.dropzone .dz-preview {
 			font-size: 14px;
 			font-weight: 500;
 			letter-spacing: -0.24px;
+			line-height: 1.4;
 		}
 
 	}
@@ -3695,8 +3696,9 @@ body.search-results .search_results {
 		}
 
 		.media-folder_details {
-			margin-top: 12px;
+			margin-top: 20px;
 			width: calc(100% - 106px);
+			line-height: 1;
 		}
 	}
 
